--- a/react/public/css/style.css
+++ b/react/public/css/style.css
@@ -1,5 +1,6 @@
 * {box-sizing: border-box;}
 
+
 body {
     padding: 0;
     margin: 0;
@@ -98,3 +99,8 @@ h2 {
 caption {
     color: #982257;
 }
+
+/* .input-form {
+    background-color: #22EE88;
+} */
+
